[package]
name = "chess-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_embedded_assets = "0.9.1"
chrono = "0.4.31"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[target.armv7-linux-androideabi]